Redirect to site based on ID

--- a/uURL/Views/Home/Index.cshtml
+++ b/uURL/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "uURL - URL Shortener";
 }
 
-<h2>Index</h2>
+<h2>uURL</h2>
 
+Short ID: @ViewBag.ID
+Redirecting to: @ViewBag.URL
