--- a/uURL/Views/Home/Index.cshtml
+++ b/uURL/Views/Home/Index.cshtml
@@ -1,8 +1,29 @@
-﻿@{
+﻿@model uURL.Models.ShortUrl
+
+@{
     ViewBag.Title = "uURL - URL Shortener";
 }
 
-<h2>uURL</h2>
+<h2>uUrl</h2>
 
-Short ID: @ViewBag.ID
-Redirecting to: @ViewBag.URL
+<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+
+@using (Html.BeginForm()) {
+    @Html.ValidationSummary(true)
+    <fieldset>
+        <legend>ShortUrl</legend>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.URL)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.URL)
+            @Html.ValidationMessageFor(model => model.URL)
+        </div>
+
+        <p>
+            <input type="submit" value="Create" />
+        </p>
+    </fieldset>
+}
