--- a/uURL/Views/Home/Index.cshtml
+++ b/uURL/Views/Home/Index.cshtml
@@ -9,6 +9,11 @@
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
+URL: @Model.URL
+<br />
+ID: @Model.ID
+<br />
+
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
     <fieldset>
