--- a/uURL/Views/Home/Index.cshtml
+++ b/uURL/Views/Home/Index.cshtml
@@ -9,10 +9,16 @@
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
-URL: @Model.URL
-<br />
-ShortName: @Model.ShortName
-<br />
+@{
+    
+    var Message = "Enter a URL to Shorten.";
+    if (IsPost) {
+        Message = Model.URL + @" Shortened to http://uurl.co/" + Model.ShortName;
+    }
+    
+}
+
+<h5>@Message</h5>
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
@@ -28,7 +34,7 @@ ShortName: @Model.ShortName
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Shorten" />
         </p>
     </fieldset>
 }
