--- a/uURL/Views/Home/Index.cshtml
+++ b/uURL/Views/Home/Index.cshtml
@@ -8,12 +8,10 @@
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
 @{
-    
     var Message = "Enter a URL to Shorten.";
     if (IsPost) {
         Message = Model.URL + @" Shortened to http://uurl.co/" + Model.ShortName;
-    }
-    
+    }  
 }
 
 @using (Html.BeginForm()) {
@@ -24,7 +22,7 @@
     </div>
     <div class="editor-field">
         @Html.EditorFor(model => model.URL)
-        @Html.ValidationMessageFor(model => model.URL)
+        @Html.ValidationMessageFor(model => model.URL, null, new { @class = "error_message" })
     </div>
 
     <p>
