--- a/uURL/Views/Shared/_Layout.cshtml
+++ b/uURL/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
     </div>
 
     <div id="author_info">
-        <p>Created by <a href="http://creatingcode.com">Robert Greiner</a>.  Source available on <a href="http://github.com/robert_greiner/uURL">Github</a>.</p>
+        <p>Created by <a href="http://creatingcode.com">Robert Greiner</a>.  Source available on <a href="http://github.com/robertgreiner/uURL">Github</a>.</p>
     </div>
 
     <script type="text/javascript" charset="utf-8">
