Fixed issue with not being able to copy/paste from <h2> tag.  Place the shortened URL in the URL textbox for easy copy/paste.

--- a/uURL/Views/Home/Index.cshtml
+++ b/uURL/Views/Home/Index.cshtml
@@ -9,9 +9,9 @@
 
 @{
     var Message = "Enter a URL to Shorten.";
-    if (IsPost) {
-        Message = Model.URL + @" Shortened to http://uurl.co/" + Model.ShortName;
-    }  
+    //if (IsPost) {
+    //    Message = Model.URL + @" Shortened to http://uurl.co/" + Model.ShortName;
+    //}  
 }
 
 @using (Html.BeginForm()) {
